welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:28: error: type mismatch;
 found   : Array[java.awt.Color]
 required: java.awt.Color
		setCouleurBrosse(rassemblage());
                                            ^